create trip added and routed

--- a/src/components/pages/Home/RenderHome.css
+++ b/src/components/pages/Home/RenderHome.css
@@ -1,5 +1,6 @@
 .containerDiv {
     background-color: white;
-    padding: 7.5%;
+    padding: 15.5%;
+    width: 90vw;
     border-radius: 10px;
 }
