--- a/src/components/pages/ManageTrip/ManageTrip.css
+++ b/src/components/pages/ManageTrip/ManageTrip.css
@@ -53,32 +53,88 @@
 }
 
 .searchForm {
-    margin-left: 13%;
+    margin-left: 5%;
     display: flex;
     flex-direction: row; 
+    align-items: center;
+    /* justify-content: center; */
     width: 100%;
-    /* border: 3px orange solid; */
+    /* border: 3px skyblue solid; */
 }
 
 .searchBar {
-    margin-left: 1rem;
-    width: 70%;
+    margin-left: 1%;
+    width: 60%;
+    border: solid #fd6d41 2px;
 }
 
+.search {
+    /* border: 3px forestgreen dashed; */
+width: 70%;
+}
 
 .search-box {
-    width: 45%;
+    width: 75%;
+    /* border: 3px magenta solid; */
 }
 
 .submit {
-    margin-left: 1rem;
     color: #fd6d41;
     height: 10%;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    margin-left: -20%;
+    padding-left: 2.5%;
+    padding-right: 2.5%;
     background-color: rgb(22, 22, 22);
     border-radius: 7px;
     /* border: 2px black solid; */
+}
+
+@media screen and (max-width: 1210px) {
+    .submit {
+        margin-left: -15%;
+    
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .submit {
+        margin-left: -10%;
+    
+    }
+}
+
+@media screen and (max-width: 530px) {
+    .submit {
+        margin-left: -7%;
+    
+    }
+}
+
+.mapContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 2%;
+    margin-bottom: 1%;
+    height: 30vh;
+    width: 90vw;
+}
+
+.itemContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.map {
+    width: 100%;
+    height: 90%;
+}
+
+.results {
+    margin-left: 5%;
+    margin-top: 1%;
 }
 
 .pinned-items {
