--- a/src/components/pages/ManageTrip/ManageTrip.css
+++ b/src/components/pages/ManageTrip/ManageTrip.css
@@ -17,7 +17,7 @@
     justify-content: space-between;
     background-color: white;
     width: 100%;
-    height: 90vh;
+    
     margin: 0%;
     /* border: 3px salmon solid; */
 }
@@ -26,6 +26,7 @@
 .search-n-feed {
     display: flex;
     flex-direction: column;
+    height: 100vh;
     /* border: 2px teal solid; */
 
 }
@@ -75,6 +76,7 @@ width: 70%;
 
 .search-box {
     width: 75%;
+    height: 100%;
     /* border: 3px magenta solid; */
 }
 
@@ -127,6 +129,34 @@ width: 70%;
     justify-content: center;
     align-items: center;
 }
+
+.itemCard {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: rgb(36, 36, 36);
+    color: white;
+    width: 90%;
+    margin: 1%;
+    padding: 2.5%;
+    border-radius: 5px;
+}
+
+.itemIcon {
+    width: 40%;
+    height: 40%;
+    border: none;
+}
+
+.itemRow {
+    display: flex;
+    flex-direction: row;
+    width: 10vw;
+    font-size: 0.95rem;
+    justify-content: space-between;
+    /* border: 2px seagreen solid; */
+}
+
 .map {
     width: 100%;
     height: 90%;
@@ -137,6 +167,14 @@ width: 70%;
     margin-top: 1%;
 }
 
+
+.resultsFill {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 .pinned-items {
     display: flex;
     flex-direction: column;
@@ -144,6 +182,7 @@ width: 70%;
     align-items: center;
     color: white;
     width: 30vw;
+    height: 100%;
 
     /* border: 5px dodgerblue solid; */
 
