--- a/src/components/pages/ExpandedPage/content_part.css
+++ b/src/components/pages/ExpandedPage/content_part.css
@@ -1,6 +1,5 @@
 .Google_map {
   border-radius: 55px;
-
   padding: 0 20px;
   width: 100%;
   height: 100%;
@@ -8,4 +7,13 @@
 .contentPartContainer {
   display: flex;
   flex-direction: row;
+}
+
+h5 {
+  padding-top: 10px;
+}
+
+.restaurantPic {
+  width: 250px;
+  height: 200px;
 }
