--- a/src/components/pages/ManageTrip/ManageTrip.css
+++ b/src/components/pages/ManageTrip/ManageTrip.css
@@ -142,9 +142,35 @@ width: 70%;
     border-radius: 5px;
 }
 
+.buttonRow {
+    display: flex;
+    flex-direction: row;
+}
+
+.addTripButton {
+    background-color: white;
+    color: #f83a00;
+    -webkit-text-stroke: 0.75px #da3402;
+    border: none;
+    margin: 1%;
+    padding: 1.5%;
+    border-radius: 4px;
+}
+
+.viewDeetsButton {
+    background-color: white;
+    color:  #f83a00;
+    -webkit-text-stroke: 0.75px #da3402;
+    border: none;
+    margin: 1%;
+    padding: 1.5%;
+    border-radius: 4px;
+}
+
 .itemIcon {
-    width: 40%;
-    height: 40%;
+    height: 40px;
+    background: transparent no-repeat center;
+    background-size: cover;
     border: none;
 }
 
@@ -165,6 +191,7 @@ width: 70%;
 .results {
     margin-left: 5%;
     margin-top: 1%;
+    padding-bottom: 5%;
 }
 
 
