--- a/src/components/pages/ManageTrip/ManageTrip.css
+++ b/src/components/pages/ManageTrip/ManageTrip.css
@@ -58,7 +58,6 @@
     display: flex;
     flex-direction: row; 
     align-items: center;
-    /* justify-content: center; */
     width: 100%;
     /* border: 3px skyblue solid; */
 }
@@ -85,10 +84,13 @@ width: 70%;
     height: 10%;
     margin-left: -20%;
     padding-left: 2.5%;
+    margin-bottom: 1.1%;
     padding-right: 2.5%;
+    padding-top: .5%;
+    padding-bottom: 0.5%;
     background-color: rgb(22, 22, 22);
     border-radius: 7px;
-    /* border: 2px black solid; */
+    border: none;
 }
 
 @media screen and (max-width: 1210px) {
