--- a/src/components/pages/ManageTrip/ManageTrip.css
+++ b/src/components/pages/ManageTrip/ManageTrip.css
@@ -18,7 +18,7 @@
     justify-content: space-between;
     background-color: white;
     width: 100%;
-    
+    height: 100vh;
     margin: 0%;
     /* border: 3px salmon solid; */
 }
@@ -45,6 +45,10 @@
 
 .logo-container {
     width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
     margin: 0;
     background: rgb(36,36,36);
     background: -moz-linear-gradient(0deg, rgba(36,36,36,1) 23%, rgba(64,64,64,1) 78%, rgba(74,74,74,1) 88%, rgba(95,95,95,1) 100%, rgba(130,130,130,1) 100%, rgba(181,181,181,1) 100%, rgba(213,213,213,1) 100%, rgba(218,218,218,1) 100%, rgba(231,231,231,1) 100%, rgba(255,255,255,1) 100%);
@@ -60,41 +64,100 @@
     /* border: 2px purple solid; */
 }
 
+.forms {
+    margin-left: 10%;
+}
+
+
 .searchForm {
-    margin-left: 5%;
     display: flex;
     flex-direction: row; 
     align-items: center;
-    width: 100%;
+    justify-content: center;
+    align-self: center;
+    width: 70%;
     /* border: 3px skyblue solid; */
 }
 
 .searchBar {
-    margin-left: 1%;
-    width: 60%;
+    width: 85%;
     border: solid #fd6d41 2px;
+    margin-left: 3%;
+}
+
+.searchBar2 {
+    width: 75%;
+    border: solid #fd6d41 2px;
+    margin-left: 3%;
+}
+
+.tripTitle {
+    width: 60%;
+    /* border: 2px firebrick solid; */
 }
 
 .search {
     /* border: 3px forestgreen dashed; */
-width: 70%;
+    width: 100%;
+    padding: 0;
+    margin: 0;
 }
 
 .search-box {
     width: 75%;
-    height: 100%;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
     /* border: 3px magenta solid; */
+}
+
+.navGroup {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 30%;
+    margin-right: 10%;
+}
+
+
+.navButt {
+    background-color:  #f83a00;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    height: 30%;
+    margin: 1%;
+    padding: 1.5%;
+    border-radius: 4px;
+}
+
+
+.navButt a {
+color: white;
+-webkit-text-stroke: 1px white;
 }
 
 .submit {
     color: #fd6d41;
     height: 10%;
-    margin-left: -20%;
     padding-left: 2.5%;
-    margin-bottom: 1.1%;
     padding-right: 2.5%;
     padding-top: .5%;
     padding-bottom: 0.5%;
+    background-color: rgb(22, 22, 22);
+    border-radius: 7px;
+    border: none;
+}
+
+.submitName {
+    color: #fd6d41;
+    height: 9%;
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-top: .45%;
+    padding-bottom: 0.45%;
     background-color: rgb(22, 22, 22);
     border-radius: 7px;
     border: none;
@@ -128,8 +191,9 @@ width: 70%;
     justify-content: center;
     margin-top: 2%;
     margin-bottom: 1%;
+    padding-left: 5%;
     height: 30vh;
-    width: 90vw;
+    width: 100%;
 }
 
 .itemContainer {
@@ -186,6 +250,17 @@ width: 70%;
     border-radius: 4px;
 }
 
+.trip-name {
+    font-size: 2.2em;
+    text-decoration: underline;
+}
+
+.trip-name:hover {
+    text-decoration: line-through;
+    color: #fd6d41f6;
+    font-style: italic;
+}
+
 .tripItem:hover {
     text-decoration: line-through;
     color: #fd6d41f6;
@@ -233,7 +308,7 @@ width: 70%;
     background-color: rgb(36, 36, 36);
     align-items: center;
     color: white;
-    width: 30vw;
+    width: 20vw;
     height: 100%;
 
     /* border: 5px dodgerblue solid; */
