map opens to users current location, list deletes correct item

--- a/src/components/pages/ManageTrip/ManageTrip.css
+++ b/src/components/pages/ManageTrip/ManageTrip.css
@@ -267,6 +267,12 @@ color: white;
     font-style: italic;
 }
 
+.tripItem {
+padding-left: 5%;
+padding-right: 5%;
+margin-top: 6%;
+}
+
 .itemIcon {
     height: 40px;
     background: transparent no-repeat center;
