--- a/src/components/pages/WelcomePage/welcome_page.css
+++ b/src/components/pages/WelcomePage/welcome_page.css
@@ -2,6 +2,7 @@
   font-family: sans-serif;
   text-align: center;
   min-height: 100vh;
+  background-image: url('../../../images/video_fallback.png');
 }
 .logoContainer {
   padding-top: 10vh;
