post and delete working with the backend and is recieving the data properly. the list render is a little buggy, some side effect because its rendering the list exponentially. this isnt happening with the BE data, just the the rendering

--- a/src/components/pages/ManageTrip/ManageTrip.css
+++ b/src/components/pages/ManageTrip/ManageTrip.css
@@ -267,6 +267,10 @@ color: white;
     font-style: italic;
 }
 
+a.submitText {
+    color: white;
+}
+
 .tripItem {
 padding-left: 5%;
 padding-right: 5%;
